@@ -1,3 +1,9 @@
+2009-07-02  Piotr Fusik  <fox@scene.pl>
+* asap.c: source code shortened using the UWORD macro
+
+* java/ASAPApplet.java: small refactoring
+
+
 2009-06-10  Piotr Fusik  <fox@scene.pl>
 * asap.c, java/ASAP.ppjava: ASAP_DurationToString() returns an empty string
   and not garbage if passed 100 minutes or more
@@ -39,7 +45,7 @@
 2009-05-27  Piotr Fusik  <fox@scene.pl>
 * asapscan.c: do not trigger silence detection at the initial silence
 
-
+ 
 2009-05-18  Piotr Fusik  <fox@scene.pl>
 * apokeysnd.c: apokeysnd.dll stripped from 50k to 11k by not using
   the C library
